# Socialformer

./: .gitignore  pyproject.toml
dataprocess/: gen_static_distance_weight.py  run.sh
dataprocess/bert/: dataset.py
dataprocess/results/: all.txt
