[tool.poetry]
name = "socialformer"
version = "0.1.0"
description = ""
authors = ["Julien Rossi <j.rossi@uva.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.17.0"
torch = "^1.11.0"
datasets = "^2.1.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
